# xlog-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: criterion_bench.yml  phase2c2_official_nightly.yml  rust_ci.yml  rust_coverage.yml  rust_release.yml
artifacts/bench-compare/20260306-harness-matrix-rerun/: manifest.tsv  results_raw.jsonl  summary.json  summary.md
artifacts/bench-compare/20260306-p0p1wave/: results_smoke.jsonl
artifacts/bench-compare/20260306-perf6/: results_rust_async.jsonl  results_rust_sync.jsonl
artifacts/bench-compare/20260306-perf7/: results_rust_async.jsonl
artifacts/bench-compare/20260306-perf9/: results_rust_async.jsonl
artifacts/bench-compare/20260306-syncbuffer-perf/: summary.json  summary.md
artifacts/bench-compare/20260306-syncbuffer-perf/sync1t/: results_cpp_sync.jsonl  results_rust_sync.jsonl
artifacts/bench-compare/20260306-syncbuffer-perf/sync4t/: results_cpp_sync.jsonl  results_rust_sync.jsonl
artifacts/bench-compare/20260306-syncfastpath-perf/: summary.json  summary.md
artifacts/bench-compare/20260306-syncfastpath-perf/sync1t/: results_cpp_sync.jsonl  results_rust_sync.jsonl
artifacts/bench-compare/20260306-syncfastpath-perf/sync4t/: results_cpp_sync.jsonl  results_rust_sync.jsonl
benchmarks/criterion/macos14-arm64/: README.md  baseline_metadata.json  criterion_summary.json
crates/mars-xlog-harmony-napi/: Cargo.toml
crates/mars-xlog-harmony-napi/src/: lib.rs
crates/xlog/: Cargo.toml  README.md
crates/xlog-android-jni/: Cargo.toml
crates/xlog-android-jni/src/: lib.rs
crates/xlog-core/: Cargo.toml  README.md  build.rs
crates/xlog-core/benches/: criterion_components.rs
crates/xlog-core/benches/fixtures/: manifest.json
crates/xlog-core/examples/: bench_components.rs
crates/xlog-core/src/: active_append.rs  appender_engine.rs  apple_console_shim.m  apple_console_shim.mm  buffer.rs  compress.rs  crypto.rs  dump.rs  file_maintenance.rs  file_manager.rs  file_naming.rs  file_ops.rs  file_policy.rs  file_runtime.rs  file_target.rs  formatter.rs  lib.rs  metrics.rs  mmap_store.rs  oneshot.rs  platform_console.rs  platform_tid.rs  protocol.rs  record.rs  registry.rs
crates/xlog-core/tests/: async_engine.rs  compress_roundtrip.rs  dump.rs  mmap_recovery.rs  oneshot_flush.rs  protocol_compat.rs
crates/xlog-sys/: Cargo.toml
crates/xlog-sys/examples/: bench_backend_cpp.rs
crates/xlog-uniffi/: Cargo.toml
crates/xlog-uniffi/src/: lib.rs
crates/xlog/benches/: criterion_write_path.rs
crates/xlog/examples/: bench_backend.rs  gen_fixture.rs
crates/xlog/src/: bench.rs  lib.rs
crates/xlog/src/backend/: cpp.rs  ffi.rs  metrics.rs  mod.rs  rust.rs  stage_profile.rs
docs/: benchmark_strategy.md  rust_core_code_review.md  rust_core_performance_review.md  rust_migration_review.md  rust_quality_bar.md  rust_release_plan.md  rust_release_process.md  rust_semantic_redlines.md  xlog_rust_migration_plan.md
docs/releases/: 0.1.0-preview.2.md
scripts/xlog/: analyze_bench.py  analyze_criterion.py  bench_matrix.tsv  bench_matrix_baseline.tsv  bench_matrix_feature.tsv  bench_matrix_stress.tsv  bench_regression_thresholds.json  check_bench_regression.py  check_mars_xlog_core_release.sh  check_mars_xlog_release.sh  check_rust_release_tag.sh  decode_compare.sh  decode_mars_nocrypt_py3.py  gen_fixtures.sh  generate_criterion_decode_fixtures.py  run_backend_compare.sh  run_bench_matrix.sh  run_criterion_bench.sh  run_phase2c2_official.sh  run_phase5_regression.sh  set_rust_release_version.sh  setup_py2_decoder_env.sh  update_ci_criterion_baseline.sh
