[workspace]
resolver = "2"
members = [
    "crates/xlog-sys",
    "crates/xlog",
    "crates/xlog-core",
    "crates/xlog-uniffi",
    "crates/xlog-android-jni",
    "crates/mars-xlog-harmony-napi"
]
default-members = [
    "crates/xlog",
    "crates/xlog-core",
    "crates/xlog-uniffi",
    "crates/xlog-android-jni",
    "crates/mars-xlog-harmony-napi"
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/Tencent/mars"

[workspace.dependencies]
libc = "0.2"
thiserror = "1"
