[package]
name = "mars-xlog-android-jni"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["rust-backend"]
rust-backend = ["mars-xlog/rust-backend"]

[dependencies]
jni = "0.21"
mars-xlog = { path = "../xlog", version = "0.1.0", default-features = false }
once_cell = "1"
