[package]
name = "mars-xlog-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["rlib"]

[dependencies]
thiserror = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
flate2 = "1"
zstd = "0.13"
k256 = { version = "0.13", features = ["ecdh"] }
rand_core = "0.6"
hex = "0.4"
memmap2 = "0.9"
fs2 = "0.4"

[dev-dependencies]
hex = "0.4"
tempfile = "3"
