[package]
name = "mars-xlog-uniffi"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["rust-backend"]
rust-backend = ["mars-xlog/rust-backend"]
ffi-backend = ["mars-xlog/ffi-backend"]

[dependencies]
mars-xlog = { path = "../xlog", default-features = false, features = ["tracing"] }
thiserror = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "std"] }
uniffi = { version = "0.30.0"}

[profile.release]
lto = true
strip = true
