[package]
name = "mars-xlog"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["rlib"]

[dependencies]
libc = { workspace = true }
thiserror = { workspace = true }
mars-xlog-core = { path = "../xlog-core", version = "0.1.0", optional = true }
mars-xlog-sys = { path = "../xlog-sys", version = "0.1.0", optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "std"], optional = true }
crossbeam-queue = "0.3"

[features]
# Phase 6: 默认仅保留 Rust backend，移除 C++ 构建依赖链。
default = ["rust-backend"]
# Rust 后端
rust-backend = ["dep:mars-xlog-core", "dep:chrono"]
# C++ backend (via mars-xlog-sys FFI)
cpp-backend = ["dep:mars-xlog-sys"]
# 控制是否启用 Rust 侧便捷宏
macros = []
tracing = ["dep:tracing", "dep:tracing-subscriber"]
# benchmark / profiling internals used by local harnesses only
bench-internals = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "criterion_write_path"
harness = false
