[package]
name = "mars-xlog"
version = "0.1.0-preview.1"
edition = "2021"
license = "MIT"
description = "Pure Rust xlog library with async/sync appenders, compression, encryption, and tracing integration."
homepage.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/mars-xlog"
keywords = ["logging", "xlog", "tracing", "mobile", "rust"]
categories = ["development-tools::debugging", "api-bindings"]

[lib]
crate-type = ["rlib"]

[dependencies]
libc = { workspace = true }
thiserror = { workspace = true }
mars-xlog-core = { path = "../xlog-core", version = "0.1.0-preview.1", optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "std"], optional = true }
crossbeam-queue = "0.3"
metrics = { version = "0.22", optional = true }
metrics-exporter-prometheus = { version = "0.13", optional = true }

[features]
# Public release surface is Rust-only.
default = ["rust-backend"]
rust-backend = ["dep:mars-xlog-core", "dep:chrono"]
macros = []
tracing = ["dep:tracing", "dep:tracing-subscriber"]
metrics = ["dep:metrics", "mars-xlog-core?/metrics"]
metrics-prometheus = ["dep:metrics-exporter-prometheus", "metrics"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "criterion_write_path"
harness = false

[package.metadata.docs.rs]
features = ["macros", "tracing"]
no-default-features = false
